tests/ifcc-test-output/testfiles-2_invalid_program/gcc-compile.txt
input.c:1:1: error: unknown type name ‘Si’
    1 | Si ça c'est du C, moi je suis prof de manga.
      | ^~
input.c:1:7: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘c’
    1 | Si ça c'est du C, moi je suis prof de manga.
      |       ^
input.c:1:8: warning: missing terminating ' character
    1 | Si ça c'est du C, moi je suis prof de manga.
      |        ^
input.c:1:8: error: missing terminating ' character
    1 | Si ça c'est du C, moi je suis prof de manga.
      |        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

return code: 1
